Fix message sent not showing bug

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -258,16 +258,12 @@ small.copy-msg {
 	border: 1px solid rgba(170, 170, 170, 0.5);
 	border-radius: 20px;
 	background-color: black;
-	opacity: 0;
 	transition: opacity 0.5s ease-in-out;
+	z-index: 20;
 	p.css-ahj2mt-MuiTypography-root {
 		color: white;
 		font-size: 18px;
 	}
-}
-
-.success-message.show {
-	opacity: 1;
 }
 
 // ------------------------------------------
@@ -288,7 +284,6 @@ small.copy-msg {
 		overflow: hidden;
 		border-radius: 50%;
 		position: absolute;
-		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		border: 1px solid rgba(170, 170, 170, 0.5);
